commiting index file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <a href="basic.html" target="_main">basic</a>
-        <a href="form.html" target="_main">form</a>  
-        <a href="list.html" target="_main">list</a>  
+        <a href="Form.html" target="_main">Form</a>  
+        <a href="List.html" target="_main">List</a>  
         <a href="Frontend.html" target="_main">Frontend</a>
     
     </body>
